API - Small fixes
